fix medium checklist items 45 46 49 50 51